# pwc-reg-compliance

./: .gitignore
response_pipeline/: IMMEDIATE_FIXES.md  PRIORITY_IMPROVEMENTS.md  README.md  README_CONTEXT_AWARE.md  STABILIZATION_PLAN.md  check_documents.py  debug_minors_query.py  main.py  pyproject.toml  requirements.txt  run_server.py  setup_project.py  test_context_aware.py
response_pipeline/config/boundaries/: scope_boundaries.json
response_pipeline/config/filters/: consent_filters.json
response_pipeline/config/profiles/: consent_focus.json
response_pipeline/database/: azure_sql_compatible_ddl.sql  generate_password_hash.py  regulatory_query_engine_ddl.sql  remove_cache_tables.sql
response_pipeline/docs/: CONTEXT_AWARE_API_CHANGES.md
response_pipeline/pipeline/: benchmark_comparison.py  reg_conversational_interface.py  test_andrea_questions_comprehensive.py  test_andrea_quick.py  test_next5_medium_questions.py
response_pipeline/prompts/: prompts.json  prompts.json.backup  prompts_clean.json  query_manager_prompts.json
response_pipeline/scripts/: integrate_term_normalizer.py  test_api_simple.py
response_pipeline/src/clients/: __init__.py  azure_openai.py  azure_sql.py  connection_manager.py  redis_client.py
response_pipeline/src/config/: settings.py
response_pipeline/src/jobs/: daily_analytics.py
response_pipeline/src/models/: __init__.py  query.py  response.py
response_pipeline/src/response_generation/: context_builder.py  prompt_templates.py
response_pipeline/tests/: medium_complex_questions.md
response_pipeline/utilities/: README.md
(+164 files in other folders)
